--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel</title>
-    <link rel="stylesheet" href="css/admin_panel.css">
+    <link rel="stylesheet" href="admin_panel.css">
 </head>
 <body>
     <div id="admin-panel">
@@ -77,6 +77,6 @@
         </main>
     </div>
 
-    <script src="scripts/admin_panel.js"></script>
+    <script src="admin_panel.js"></script>
 </body>
 </html>
