--- a/admin_panel.html
+++ b/admin_panel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel</title>
-    <link rel="stylesheet" href="css/admin_panel.css">
+    <link rel="stylesheet" href="admin_panel.css">
 </head>
 <body>
     <div id="admin-panel">
@@ -160,7 +160,7 @@
     
         <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-database.js"></script>
-        <script src="scripts/admin_panel.js"></script>
+        <script src="admin_panel.js"></script>
     </body>
     </html>
     
